# monitoring

./: .gitignore  README.md
.github/workflows/: test.yml
network_speed/: README.md  SpeedTest.py  config.yaml  prometheus.service  pyproject.toml  speedtest-monitor.service
network_speed/grafana/: README.md
network_speed/grafana/terraform/: main.tf  terraform.tfvars
network_speed/prometheus/: prometheus.yml
network_speed/src/: SpeedTest.py  __init__.py  prometheus_manager.py  router_restart.py  speed_test.py
network_speed/tests/: conftest.py  test_cli_main.py  test_package_structure.py  test_prometheus_manager.py  test_router_restart.py  test_speedtest.py  test_wsgi_mode.py
system_usage/: system_usage_data.py
